<resources>
    <string name="app_name">lesson10_testing</string>
    <string name="update">Update</string>
    <string name="input_new_name">Input new name</string>
    <string name="empty_name">No name</string>
</resources>
